# dumbmutate

./: CMakeLists.txt  FileMutator.h  HTMLExporter.cpp  HTMLExporter.h  LICENSE  MutatorBase.cpp  MutatorBase.h  MutatorDoubleAddSubtr.cpp  MutatorDoubleAddSubtr.h  MutatorNumShift.cpp  README.md  SourceFile.cpp  SourceFile.h  Utility.cpp  Utility.h  main.cpp
Source/: CommandRunner.cpp  CommandRunner.h  FileMutator.cpp  HTMLExporter.cpp  HTMLExporter.h  MutatorAddSubtr.cpp  MutatorAddSubtr.h  MutatorAndBitwiseAnd.cpp  MutatorAndBitwiseAnd.h  MutatorAndOr.cpp  MutatorAndOr.h  MutatorBase.cpp  MutatorBase.h  MutatorCaret.cpp  MutatorCaret.h  MutatorEqual.cpp  MutatorEqual.h  MutatorIf.cpp  MutatorIf.h  MutatorIncrDecr.cpp  MutatorIncrDecr.h  MutatorNEqual.cpp  MutatorNEqual.h  MutatorNumShift.cpp  MutatorNumShift.h  MutatorTrueFalse.cpp  MutatorTrueFalse.h  MutatorXYZ.cpp  MutatorXYZ.h  SourceFile.cpp  SourceFile.h  Utility.h  cxxopts.hpp  main.cpp
demo/: main.cpp
forktest/: CMakeLists.txt  main.cpp
